# genomics_classification

./: .gitignore  Cargo.toml  LZ78 Classification Results.xlsx  README.md  explore.py  lz78_project.py  lz78_python_interface_tutorial.ipynb  notebook.ipynb  python_binding_documentation.ipynb  run_best_models.sh  test.txt
crates/experiments/: Cargo.toml
crates/experiments/src/: argparse.rs  classify.rs  compress.rs  compression_fixed_lz78_source.rs  compression_via_lz78_source.rs  encode_decode.rs  generate.rs  lib.rs  lz78_source_compression.rs  main.rs  train.rs  utils.rs
crates/lz78/: Cargo.toml
crates/lz78/src/: encoder.rs  lib.rs  sequence.rs  source.rs  spa.rs  tree.rs  util.rs
crates/python/: Cargo.toml  encoder.rs  lz78.pyi  mod.rs  pyproject.toml  sequence.rs  test.ipynb
crates/python/src/: encoder.rs  lib.rs  sequence.rs  spa.rs
scripts/: run_generate.sh  run_train.sh
