[workspace]
members = ["crates/lz78", "crates/experiments", "crates/python"]

[workspace.package]
version = "0.1.0"
edition = "2021"
resolver = "2"

[workspace.dependencies]
# subcrates
lz78 = { path = "crates/lz78", version = "0.1", package = "lz78-rust" }
experiments = { path = "crates/experiments", version = "0.1", package = "lz78-experiments" }

# general
anyhow="1.0.86"
rand = "0.8.5"
itertools = "0.13.0"
parquet = "52.2"
png = "0.17"
clap = {version = "4.5", features = ["derive"]}
jzon = "0.12.5"
flate2 = "1.0.33"
rayon = "1.10.0"
ndarray = "0.16.1"
bytes = "1.7.2"
csv = "1.3.0"
bitvec="1.0.1"
pyo3="0.22.3"