[package]
name = "lz78-experiments"
edition = "2021"
version = "0.1.0"

[dependencies]

anyhow.workspace = true
rand.workspace = true
itertools.workspace = true
parquet.workspace = true
png.workspace = true
lz78.workspace = true
clap.workspace = true
flate2.workspace = true
json.workspace = true
rkyv.workspace = true

[[bin]]
name = "generate"
path = "src/generate.rs"

[[bin]]
name = "train"
path = "src/train.rs"

[[bin]]
name = "source_compression"
path = "src/lz78_source_compression.rs"

[[bin]]
name = "encode-decode"
path = "src/encode_decode.rs"