[package]
name = "lz78-experiments"
edition = "2021"
version = "0.1.0"

[dependencies]

anyhow.workspace = true
rand.workspace = true
itertools.workspace = true
parquet.workspace = true
png.workspace = true
lz78.workspace = true
clap.workspace = true
flate2.workspace = true
jzon.workspace = true
rayon.workspace = true
ndarray.workspace = true
bytes.workspace = true
csv.workspace = true

[[bin]]
name = "generate"
path = "src/generate.rs"

[[bin]]
name = "train"
path = "src/train.rs"

[[bin]]
name = "source-compression"
path = "src/compression_via_lz78_source.rs"

[[bin]]
name = "source-compression-fixed"
path = "src/compression_fixed_lz78_source.rs"

[[bin]]
name = "encode-decode"
path = "src/encode_decode.rs"

[[bin]]
name = "compress"
path = "src/compress.rs"

[[bin]]
name = "classify"
path = "src/classify.rs"