[package]
name = "lz78-python"
edition = "2021"
version = "0.1.0"

[lib]
name = "lz78"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.22.3"
features = ["extension-module", "anyhow"]

[dependencies]
anyhow.workspace = true
rand.workspace = true
itertools.workspace = true
lz78.workspace = true
bitvec.workspace = true
bytes.workspace = true